# RsaDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/liaoxiaomin/mycmakejnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/wind/emode/atci/: IOpenAtci.aidl
app/src/main/cpp/: Log.h  my_base64.cpp  myprik.h  native-lib.cpp  rsa_openssl.cpp  rsa_openssl.h
app/src/main/java/com/example/liaoxiaomin/mycmakejnitest/: ClientMainActivity.java  JniUtil.java
app/src/main/java/com/example/liaoxiaomin/mycmakejnitest/rsa/: Base64.java  BaseDecode.java  RSAEncrypt.java  RSASignature.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/liaoxiaomin/mycmakejnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
